# AcerControl

./: .gitignore  CLAUDE.md  README.md  acercontrol_tray.py  install.sh  pyproject.toml  uninstall.sh
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-privilege-boundary-cli/: 02-01-PLAN.md  02-01-SUMMARY.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
acercontrol/: __init__.py  cli.py  core.py  features.py  gui.py  gui_about.py  gui_banner.py  gui_boot.py  gui_fan.py  gui_kbd.py  gui_notifications.py  gui_profiles.py  gui_resume.py  gui_sensors.py  gui_status_pages.py  gui_theme.py  gui_window.py  privilege.py  profiles.py  sysfs.py  systemd.py  tray.py  tray_status.py
data/: 99-acer-wmi.conf  acer-performance.service  acer-performance@.service  acercontrol.bash-completion  org.acercontrol.AcerControl.desktop  org.acercontrol.policy
debian/: acercontrol.install  acercontrol.postinst  acercontrol.postrm  changelog  control  copyright  rules
libexec/: acercontrol-disable-ppd  acercontrol-helper  acercontrol-manage-service  acercontrol-reload-acer-wmi  acercontrol-set-boot-profile  acercontrol-setfan  acercontrol-setkbd  acercontrol-setprofile
tools/: bundle_cli.py  setup_linuwu.sh  smoke_phase1.py  smoke_phase2.py  smoke_phase3.py  smoke_phase4.py  smoke_phase5.py  smoke_phase6.py  smoke_phase7.py  smoke_phase8.py  teardown_linuwu.sh  verify_no_gtk.py
(+57 files in other folders)
